# download-pipeline-processor

./: LICENSE  README.md  files-test.json  pyproject.toml
download_pipeline_processor/: __init__.py  base_post_processor.py  base_processor.py  constants.py  dummy_post_processor.py  dummy_processor.py  error.py  file_data.py  logger.py  processing_pipeline.py
download_pipeline_processor/processors/: base_post_processor.py  base_pre_processor.py  base_processor.py  dummy_post_processor.py  dummy_pre_processor.py  dummy_processor.py  processor.py
tests/: conftest.py  test_constants.py  test_error.py  test_logger.py  test_processing_pipeline.py  test_processors.py  test_utils.py
tests/test_data/: files.json
